kubernetes-manifests/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: airbnb
spec:
  selector:
    app: main-app
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: airbnb
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
  namespace: airbnb
spec:
  clusterIP: None
  selector:
    app: mongodb
  ports:
    - port: 27017
